Added Task for managing configurations records

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /BuildTools/packages
 /BuildTools/Xrm.CI.Framework.BuildTools/bin
 /BuildTools/Xrm.CI.Framework.BuildTools/obj
+/BuildTools/Xrm.CI.Framework.BuildTools.Tools/bin/Debug
+/BuildTools/Xrm.CI.Framework.BuildTools.Tools/obj
+/BuildTools/Xrm.CI.Framework.BuildTools.Tools/bin/Release
