--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /BuildTools/Xrm.CI.Framework.BuildTools.Tools/bin/Debug
 /BuildTools/Xrm.CI.Framework.BuildTools.Tools/obj
 /BuildTools/Xrm.CI.Framework.BuildTools.Tools/bin/Release
+/BuildTools/Xrm.CI.Framework.BuildTools.Tools/bin/coretools
