--- a/BuildTools/Xrm.CI.Framework.BuildTools.Tools/packages.config
+++ b/BuildTools/Xrm.CI.Framework.BuildTools.Tools/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CrmSdk.XrmTooling.PackageDeployment.PowerShell" version="9.0.2.4" targetFramework="net461" />
+  <package id="Microsoft.CrmSdk.CoreTools" version="9.0.2.6" targetFramework="net461" />
+  <package id="Microsoft.CrmSdk.XrmTooling.PackageDeployment.PowerShell" version="9.0.2.5" targetFramework="net461" />
 </packages>
