--- a/BuildTools/Xrm.CI.Framework.BuildTools/Xrm.CI.Framework.BuildTools.csproj
+++ b/BuildTools/Xrm.CI.Framework.BuildTools/Xrm.CI.Framework.BuildTools.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.5\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.5\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props')" />
@@ -181,6 +181,8 @@
     <Content Include="Tasks\MSCRMUpdateSolutionDescription\task.json" />
     <Content Include="Tasks\MSCRMCreateSolution\MSCRMCreateSolution.ps1" />
     <Content Include="Tasks\MSCRMCreateSolution\task.json" />
+    <Content Include="Tasks\MSCRMCreatePatch\MSCRMCreatePatch.ps1" />
+    <Content Include="Tasks\MSCRMCreatePatch\task.json" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
