Added Tasks to import/export solutions using config, Added ability to provide custom log directory/file for solution import

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /BuildTools/Xrm.CI.Framework.BuildTools.Tools/obj
 /BuildTools/Xrm.CI.Framework.BuildTools.Tools/bin/Release
 /BuildTools/Xrm.CI.Framework.BuildTools.Tools/bin/coretools
+/BuildTools/Xrm.CI.Framework.BuildTools/Lib/xRMCIFramework/9.0.0/System.Management.Automation.dll
