Added task to pack solutions using config

--- a/BuildTools/Xrm.CI.Framework.BuildTools/Xrm.CI.Framework.BuildTools.csproj
+++ b/BuildTools/Xrm.CI.Framework.BuildTools/Xrm.CI.Framework.BuildTools.csproj
@@ -190,6 +190,8 @@
     <Content Include="UpdateXrmCIFramework.ps1" />
     <Content Include="Tasks\MSCRMExportSolutionsUsingConfig\MSCRMExportSolutionsUsingConfig.ps1" />
     <Content Include="Tasks\MSCRMExportSolutionsUsingConfig\task.json" />
+    <Content Include="Tasks\MSCRMPackSolutionsUsingConfig\MSCRMPackSolutionsUsingConfig.ps1" />
+    <Content Include="Tasks\MSCRMPackSolutionsUsingConfig\task.json" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
