--- a/BuildTools/Xrm.CI.Framework.BuildTools.Tools/Xrm.CI.Framework.BuildTools.Tools.csproj
+++ b/BuildTools/Xrm.CI.Framework.BuildTools.Tools/Xrm.CI.Framework.BuildTools.Tools.csproj
@@ -43,11 +43,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="bin\coretools\CrmSvcUtil.exe.config" />
-    <None Include="bin\coretools\LicenseTerms.docx" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="bin\coretools\CrmSvcUtil.exe" />
     <Content Include="bin\coretools\CrmSvcUtil.xml" />
     <Content Include="bin\coretools\Microsoft.Crm.Sdk.Proxy.dll" />
@@ -62,10 +57,17 @@
     <Content Include="bin\coretools\Newtonsoft.Json.dll" />
     <Content Include="bin\coretools\Other Redistributable.txt" />
     <Content Include="bin\coretools\SolutionPackager.exe" />
+    <Content Include="bin\coretools\System.ValueTuple.dll" />
     <Content Include="bin\Debug\Xrm.CI.Framework.BuildTools.Tools.dll" />
     <Content Include="bin\Debug\Xrm.CI.Framework.BuildTools.Tools.pdb" />
     <Content Include="bin\Release\Xrm.CI.Framework.BuildTools.Tools.dll" />
     <Content Include="bin\Release\Xrm.CI.Framework.BuildTools.Tools.pdb" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\coretools\CrmSvcUtil.exe.config" />
+    <None Include="bin\coretools\LicenseTerms.docx" />
+    <None Include="bin\coretools\SolutionPackager.exe.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
