optimised Make script and added missing components to core tools

--- a/BuildTools/Xrm.CI.Framework.BuildTools/Xrm.CI.Framework.BuildTools.csproj
+++ b/BuildTools/Xrm.CI.Framework.BuildTools/Xrm.CI.Framework.BuildTools.csproj
@@ -93,6 +93,18 @@
     <Content Include="Lib\VstsTaskSdk\0.10.0\TraceFunctions.ps1" />
     <Content Include="Lib\VstsTaskSdk\0.10.0\VstsTaskSdk.psd1" />
     <Content Include="Lib\VstsTaskSdk\0.10.0\VstsTaskSdk.psm1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\Minimatch.dll" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\Strings\resources.resjson\de-de\resources.resjson" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\Strings\resources.resjson\en-US\resources.resjson" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\Strings\resources.resjson\es-es\resources.resjson" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\Strings\resources.resjson\fr-fr\resources.resjson" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\Strings\resources.resjson\it-IT\resources.resjson" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\Strings\resources.resjson\ja-jp\resources.resjson" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\Strings\resources.resjson\ko-KR\resources.resjson" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\Strings\resources.resjson\ru-RU\resources.resjson" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\Strings\resources.resjson\zh-CN\resources.resjson" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\Strings\resources.resjson\zh-TW\resources.resjson" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\VstsTaskSdk.dll" />
     <Content Include="Lib\xRMCIFramework\9.0.0\BackupOnlineInstance.ps1" />
     <Content Include="Lib\xRMCIFramework\9.0.0\DeleteOnlineInstance.ps1" />
     <Content Include="Lib\xRMCIFramework\9.0.0\DeployPackage.ps1" />
@@ -122,6 +134,19 @@
     <Content Include="Lib\xRMCIFramework\9.0.0\RemoveSolution.ps1" />
     <Content Include="Lib\xRMCIFramework\9.0.0\UpdateSolutionDescriptionInCRM.ps1" />
     <Content Include="GenerateTasksMD.ps1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\FindFunctions.ps1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\InputFunctions.ps1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\LegacyFindFunctions.ps1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\lib.json" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\LocalizationFunctions.ps1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\LoggingCommandFunctions.ps1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\LongPathFunctions.ps1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\OutFunctions.ps1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\ServerOMFunctions.ps1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\ToolFunctions.ps1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\TraceFunctions.ps1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\VstsTaskSdk.psd1" />
+    <Content Include="Lib\VstsTaskSdk\0.11.0\VstsTaskSdk.psm1" />
     <None Include="packages.config" />
     <Content Include="Tasks\MSCRMBackupOnlineInstance\MSCRMBackupOnlineInstance.ps1" />
     <Content Include="Tasks\MSCRMBackupOnlineInstance\task.json" />
