--- a/BuildTools/Xrm.CI.Framework.BuildTools/Xrm.CI.Framework.BuildTools.csproj
+++ b/BuildTools/Xrm.CI.Framework.BuildTools/Xrm.CI.Framework.BuildTools.csproj
@@ -218,6 +218,8 @@
     <Content Include="Tasks\MSCRMExportSolutionsUsingConfig\task.json" />
     <Content Include="Tasks\MSCRMPackSolutionsUsingConfig\MSCRMPackSolutionsUsingConfig.ps1" />
     <Content Include="Tasks\MSCRMPackSolutionsUsingConfig\task.json" />
+    <Content Include="Tasks\MSCRMGetSolutionMissingComponents\MSCRMGetSolutionMissingComponents.ps1" />
+    <Content Include="Tasks\MSCRMGetSolutionMissingComponents\task.json" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
