--- a/BuildTools/Xrm.CI.Framework.BuildTools/Lib/Microsoft.CrmSdk.CoreTools/9.0.0/CrmSvcUtil.exe.config
+++ b/BuildTools/Xrm.CI.Framework.BuildTools/Lib/Microsoft.CrmSdk.CoreTools/9.0.0/CrmSvcUtil.exe.config
@@ -24,24 +24,29 @@
           <add name="fileListener"/>
         </listeners>
       </source>
+      <!-- ADAL Log Source -->
+      <source name="Microsoft.IdentityModel.Clients.ActiveDirectory" switchName="Microsoft.IdentityModel.Clients.ActiveDirectory" switchType="System.Diagnostics.SourceSwitch">
+				<listeners>
+					<add name="console" type="System.Diagnostics.DefaultTraceListener" />
+					<add name="ADALListener" />
+				</listeners>
+			</source>
     </sources>
     <switches>
-
       <!--Possible values for switches: Off, Error, Warning, Information, Verbose
 						Verbose:      includes Error, Warning, Info, Trace levels
 						Information:  includes Error, Warning, Info levels
 						Warning:      includes Error, Warning levels
 						Error:        includes Error level-->
-
       <add name="Microsoft.Xrm.Tooling.CrmConnectControl" value="Error"/>
       <add name="Microsoft.Xrm.Tooling.Connector.CrmServiceClient" value="Error"/>
       <add name="CrmSvcUtil" value="Error"/>
+      <add name="Microsoft.IdentityModel.Clients.ActiveDirectory" value="Error" />
     </switches>
-
     <sharedListeners>
       <add name="fileListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="CrmSvcUtil.log"/>
+     	<add name="ADALListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="ADAL_CrmSvcUtil.log" />
     </sharedListeners>
-
   </system.diagnostics>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
