Added task to get the latest patch for a given solution

--- a/BuildTools/Xrm.CI.Framework.BuildTools/Xrm.CI.Framework.BuildTools.csproj
+++ b/BuildTools/Xrm.CI.Framework.BuildTools/Xrm.CI.Framework.BuildTools.csproj
@@ -237,6 +237,8 @@
     <Content Include="Tasks\MSCRMCheckSolution\task.json" />
     <Content Include="Tasks\MSCRMGetSolution\MSCRMGetSolution.ps1" />
     <Content Include="Tasks\MSCRMGetSolution\task.json" />
+    <Content Include="Tasks\MSCRMGetLatestPatch\MSCRMGetLatestPatch.ps1" />
+    <Content Include="Tasks\MSCRMGetLatestPatch\task.json" />
     <None Include="Tasks\MSCRMGetSolutionMissingDependencies\MSCRMGetSolutionMissingDependencies.ps1" />
     <Content Include="Tasks\MSCRMGetSolutionMissingDependencies\task.json" />
     <Content Include="Tasks\MSCRMResetOnlineInstance\MSCRMResetOnlineInstance.ps1" />
