--- a/BuildTools/Xrm.CI.Framework.BuildTools.Tools/Xrm.CI.Framework.BuildTools.Tools.csproj
+++ b/BuildTools/Xrm.CI.Framework.BuildTools.Tools/Xrm.CI.Framework.BuildTools.Tools.csproj
@@ -47,7 +47,6 @@
     <Content Include="bin\coretools\CrmSvcUtil.xml" />
     <Content Include="bin\coretools\Microsoft.Crm.Sdk.Proxy.dll" />
     <Content Include="bin\coretools\Microsoft.IdentityModel.Clients.ActiveDirectory.dll" />
-    <Content Include="bin\coretools\Microsoft.IdentityModel.Clients.ActiveDirectory.WindowsForms.dll" />
     <Content Include="bin\coretools\Microsoft.Rest.ClientRuntime.dll" />
     <Content Include="bin\coretools\Microsoft.Xrm.Sdk.Deployment.dll" />
     <Content Include="bin\coretools\Microsoft.Xrm.Sdk.dll" />
@@ -57,6 +56,7 @@
     <Content Include="bin\coretools\Newtonsoft.Json.dll" />
     <Content Include="bin\coretools\Other Redistributable.txt" />
     <Content Include="bin\coretools\SolutionPackager.exe" />
+    <Content Include="bin\coretools\SolutionPackagerLib.dll" />
     <Content Include="bin\coretools\System.ValueTuple.dll" />
     <Content Include="bin\Debug\Xrm.CI.Framework.BuildTools.Tools.dll" />
     <Content Include="bin\Debug\Xrm.CI.Framework.BuildTools.Tools.pdb" />
