--- a/BuildTools/Xrm.CI.Framework.BuildTools/Xrm.CI.Framework.BuildTools.csproj
+++ b/BuildTools/Xrm.CI.Framework.BuildTools/Xrm.CI.Framework.BuildTools.csproj
@@ -268,6 +268,8 @@
     <Content Include="Tasks\MSCRMUpdateConnectionReferences\MSCRMUpdateConnectionReferences.ps1" />
     <Content Include="Tasks\MSCRMUpdateConnectionReferences\task.json" />
     <Content Include="vss-extension-servicecendpoint.json" />
+    <Content Include="Tasks\MSCRMSharePowerApp\MSCRMSharePowerApp.ps1" />
+    <Content Include="Tasks\MSCRMSharePowerApp\task.json" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
