Added Task to Update Tenant Settings

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /BuildTools/Xrm.CI.Framework.BuildTools.Tools/bin/coretools
 /BuildTools/Xrm.CI.Framework.BuildTools/Lib/xRMCIFramework/9.0.0/System.Management.Automation.dll
 /BuildTools/Xrm.CI.Framework.BuildTools/Tools
+/BuildTools/Xrm.CI.Framework.BuildTools/.vs
